# Fast-Indexer

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  languages.py  repo_info.py
.github/workflows/: ci.yml  set-repo-metadata.yml
demo/: DEMO.md  create_thumbs.ps1  thumb_log.txt  thumb_log2.txt
src/: crawler.rs  main.rs  query.rs  trigram.rs  watcher.rs
src/index/: builder.rs  mod.rs  store.rs
